Travel::Status::DE::DBRIS 0.17 - Sun Nov 16 2025

    * Journey: New accessors: admin_id, admin_ids, operator, operators
    * New build dependencies: File::Slurp, JSON

Travel::Status::DE::DBRIS 0.16 - Sat Nov 15 2025

    * Formation::Group: Add ICE L and LINT 41; fix CFL KISS detection

Travel::Status::DE::DBRIS 0.15 - Sun Oct 26 2025

    * DBRIS: Add optional "failure_cache" key to new / new_p. This causes
      the module to cache failed requests, thus decreasing the risk of
      running into rate limits when, e.g., requesting carriage formation data
      that is not available upstream.
    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)

Travel::Status::DE::DBRIS 0.14 - Fri Sep 19 2025

    * dbris-m: Do not break --(raw-)json if the requested stop name is not an
      exact match
    * Location: Set is_additional for additional stops based on text remarks

Travel::Status::DE::DBRIS 0.13 - Mon Aug 25 2025

    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
    * Formation::Carriage: Handle undefined start/end markers

Travel::Status::DE::DBRIS 0.12 - Sat Jul 05 2025

    * dbris-m: Fix --(raw-)json for carriage formation requests
    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
    * Formation::Group: Update carriage model list (patch by Lili Chelsea Urban)
    * Formation::Group: Correctly identify LINT 27 and RS 1 trains

Travel::Status::DE::DBRIS 0.11 - Tue May 06 2025

    * Journey: Fix type/train_no handling when they are not separated by
      whitespace (Patch by Cassidy Dingenskirchen)

Travel::Status::DE::DBRIS 0.10 - Sat Apr 19 2025

    * Journey: Add train_no, line_no accessors

Travel::Status::DE::DBRIS 0.09 - Sat Apr 05 2025

    * dbris-m: Handle departures with undefined destination
    * Location: Handle negative coordinate values

Travel::Status::DE::DBRIS 0.08 - Tue Mar 25 2025

    * Journey: Add id accessor